# splayer

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  player  playmusic.c
